# lipstick

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python.yaml
lipstick/: __init__.py  cli.py  graph.py  schema.py  solve.py
models/: traccc.yaml
